--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,12 @@
-<!DOCTYPE html>
-<html class="page" lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/main.css">
-  <title>Page Title</title>
-</head>
-<body class="page__body">
+@@include('head/_head.html', {
+  
+})
 
-  <!-- 
-  @@include('parts/_header.html')
 
-  @@include('parts/_main.html')
 
-  @@include('parts/_footer.html') 
-  -->
+  <!-- header подключен в hero -->
+  @@include('modules/hero/_hero.html')
 
-  <script src="js/scripts.min.js"></script>
+  <main class='page__content'></main>
 
-</body>
-</html>
+@@include('foot/_foot.html')
