--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,10 @@
   <title>Page title</title>
 </head>
 <body class="page__body">
-  @@include('modules/header/_header.html')
-  @@include('modules/footer/_footer.html')
+  <!-- @@include('modules/header/_header.html') -->
+  <main class="page__main">
+    
+  </main>
+  <!-- @@include('modules/footer/_footer.html') -->
 </body>
 </html>
