--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="@@webRoot/css/main.min.css">
-  <title>Page title</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  @@include('utils/_head-fonts.html')
+  <title>Первый курс по компьютерной сборке</title>
 </head>
 <body class="page__body">
-  <!-- @@include('modules/header/_header.html') -->
+  @@include('modules/hero/_hero.html')
   <main class="page__main">
     
   </main>
