--- a/src/modules/header/_header.html
+++ b/src/modules/header/_header.html
@@ -1,5 +1,13 @@
 <header class="page__header header">
-  <div class="container">
+  <div class="header__inner">
     @@include('../../components/logo/_logo.html')
+
+    @@include('../nav/_nav.html')
+
+    @@include('../../components/button/_button.html', {
+      "class": "button",
+      "classMod": "purple",
+      "text": "Зайти в кабинет"
+    })
   </div>
 </header>
