--- a/src/modules/hero/_hero.html
+++ b/src/modules/hero/_hero.html
@@ -1,3 +1,51 @@
 <section class="hero">
-  @@include('../header/_header.html')
+  <div class="hero__header">
+    @@include('../header/_header.html')
+  </div>
+
+  <!-- hero__main BEGIN -->
+  <div class="hero__main">
+    <div class="container">
+      <div class="hero-main">
+        <h1 class="title title_h1 hero__title">Первый курс по&nbsp;компьютерной сборке</h1>
+      </div>
+      <div class="hero__counter">
+        @@loop('../../components/counter/_counter.html',[
+          { "type": "Дней" },
+          { "type": "Часов" },
+          { "type": "Минут" },
+          { "type": "Секунд" },
+        ])
+      </div>
+    </div>
+  </div>
+  <!-- hero__main END -->
+
+  <!-- hero__bottom BEGIN -->
+  <div class="hero__bottom hero-bottom">
+    <div class="container hero-bottom__container">
+      <div class="hero-bottom__col">
+        @@include('../../components/button/_button.html', {
+          "class": "button",
+          "classMod": "orange fw-700",
+          "text": "Заказать курс"
+        })
+      </div>
+      <div class="hero-bottom__col">
+        <div class="hero-bottom__row">
+          <span class="hero-bottom__desc">Учеников всего:</span>
+          <span class="hero-bottom__value">200</span>
+        </div>
+        <div class="hero-bottom__row">
+          <span class="hero-bottom__desc">Успешно закончили курс:</span>
+          <span class="hero-bottom__value">190</span>
+        </div>
+      </div>
+      <div class="hero-bottom__col">
+        <span class="hero-bottom__desc">Заработано учениками:</span>
+        <span class="hero-bottom__value">400 000₽</span>
+      </div>
+    </div>
+  </div>
+  <!-- hero__bottom END -->
 </section>
